# schismism

./: CMakeLists.txt  LICENSE  README  main.c  n_main.c  n_main.h  server.c
Weapons/: ReadMe.txt
include/: e_main.h  g_data.h  g_defs.h  g_inpt.h  g_main.h  g_save.h  g_util.h  n_main.h  r_main.h
res/: lvl0.txt  save.txt
res/levels/: 0.txt  1.txt  2.txt  3.txt
src/: e_main.c  g_data.c  g_main.c  n_main.c  r_main.c
